src/layout/main/index.scss
.app {
  will-change: contents;
  transform-style: preserve-3d;
  font-family: "Inter", serif;
  font-display: swap;
  .home-page,
  .about-page,
  .serivces-page,
  .contact-page,
  .single-service,
  .featured-work,
  .client-page,
  .policy-page,
  .client-discovery-form,
  .assistant-page {
    padding: 5rem 0rem 0rem;
    animation: fadeIn 1.5s;
    h1 {
      font-size: 48px;
      font-weight: normal;
      margin: 0;
    }
    h2 {
      font-size: 40px;
      font-weight: normal;
      margin: 1rem 0;
    }
    h3 {
      font-size: 24px;
      font-weight: 600;
      margin: 0;
      padding: 0.5rem 0;
    }
    h4 {
      margin: 0;
    }
    p {
      font-size: 16px;
      font-family: 'Poppins', serif !important;
      margin: 0;
      padding: 0.5rem 0;
      animation: fadeIn 2.5s forwards;
    }
    .reverse {
      flex-direction: row-reverse;
      padding: 0rem 0rem 0rem 2rem;
    }
    .main-title {
      text-transform: capitalize;
      color: #fff;
      animation: fadeInUp 0.2s 0.5s backwards;
    }
    .title {
      animation: fadeInUp 0.2s 0.5s backwards;
      margin: 0;
    }
    .subtitle {
      font-family: 'Poppins', sans-serif;
      font-size: 24px;
      font-weight: 500;
      text-transform: capitalize;
      padding: 2rem 0rem 0rem;
      margin: 0;
      color: rgb(177, 200, 254);
    }
    .btn-container {
      display: flex;
      margin-top: 2rem;
      gap: 1rem;
    }
    .socials {
      display: flex;
      justify-content: end;
      position: relative;
      animation: fadeInRight 1.5s;

      .iconList {
        flex-direction: column;
        padding-bottom: 10rem;
      }
    }
    .hero {
      display: grid;
      color: #fff;
      height: 100vh;
      padding: 6rem 4.8rem 0;
      &>* {
        grid-column: 1;
        grid-row: 1;
      }
      .text-box {
        width: 60%;
        animation: fadeIn 1.2s forwards;
      }
      
      .hero-inner {
        display: flex;
        justify-content: space-between;
        gap: 1rem;
        color: #fff;

        .text-box {
          width: 50%;
        }
      }
    }
    .second-section {
      position: relative;
      z-index: 1;
      padding: 4rem 4.8rem;
      .second-inner {
        color: #fff;

        .top-container {
          display: flex;
          justify-content: space-between;
          padding-bottom: 5rem;
          .second-text {
            margin: 0;
            padding-right: 2rem;
            width: 50%;
          }
          .image-container {
            display: flex;
            position: relative;
            gap: 1rem;
            padding-top: 2rem;
            .image {
              max-width: 240px;
              height: 350px;
              object-fit: cover;
              border-radius: 5px;
              margin-right: 2rem;
              opacity: 0.9;
              box-shadow: var(--box);
              filter: brightness(0.9);
            }
            .square-shape {
              position: absolute;
              right: -3em;
              top: 0;
              z-index: -1;
              width: 150px;
              height: 150px;
              opacity: 0.7;
              z-index: 0;
              background-image: radial-gradient(#bbd3ff 2px, transparent 2px);
              background-size: 16px 16px;
            }
            .circle-shape {
              position: absolute;
              left: -2.5rem;
              bottom: 5rem;
              z-index: -1;
              width: 150px;
              height: 150px;
              opacity: 0.7;
              z-index: -1;
              background: repeating-linear-gradient(-55deg, rgba(255, 255, 255, 0) 0.8px, var(--third-bg) 1.6px, var(--third-bg) 3px, rgba(255, 255, 255, 0) 3.8px, rgb(255 0 0 / 0%) 10px);
              border-radius: 100px;
            }
          }
        }
      }
    }
    .third-section {
      padding: 3rem 4.8rem 5rem;
      .text-box {
        padding-bottom: 2rem;
        color: #fff;
        p {
          padding: 1rem 4rem 0 0;
          text-align: left;
        }
      }
    }
    .forth-section {
      padding: 3rem 4.8rem 5rem;
      .forth-inner {
        background: #193563;
      }
    }
    .anim {
      animation: fadeIn 2s forwards;
      .steps-container {
        .steps-card {
          animation: fadeInUp 1s backwards;
        }
      
        @for $i from 1 through 10 {
      
          .steps-card:nth-child(#{$i}) {
            animation-delay: #{0.4s + ($i * 0.2s)};
          }
        }
      }
    }
    .none {
      opacity: 0;
    }
    .stage-cube-cont,
    .wrapper {
      animation: fadeIn 4s forwards;
    }
  }
}
.back-to-top {
  position: fixed;
  bottom: 15rem;
  right: 0;
  z-index: 1;
  font-size: 28px;
  padding: 10px;
  margin: 0;
  background: #9d9d9d;
  border-radius: 20% 0% 0% 20%;
  width: 50px;
  height: 50px;
  border: none;
  color: #000;
  box-shadow: var(--button-shadow);
  cursor: pointer;
  animation: fadeInRight 2s;
  transition: all 1s;
  &:hover {
    background: #636363;
    color: #fff;
  }
}
@media screen and (max-width: 768px) {
  .app {
    .home-page,
    .about-page,
    .serivces-page,
    .contact-page,
    .single-service,
    .featured-work,
    .client-page,
    .policy-page,
    .client-discovery-form,
    .assistant-page {
      h1 {
        font-size: 28px;
      }
      h2 {
        font-size: 24px;
      }
      h3 {
        font-size: 18px;
      }
      p {
        font-size: 16px;
      }
      .reverse {
        flex-direction: row-reverse;
        padding: 0rem;
      }
      .subtitle {
        font-size: 20px;
      }
      .btn-container {
        margin: 1rem 0;
      }
      .hero {
        position: relative;
        padding: 3rem 2rem 0;
        .hero-inner {
          justify-content: initial;
        }
        .socials {
          align-items: flex-end;
          justify-content: flex-start;
          animation: none;
          top: 0%;
          .iconList {
            flex-direction: row;
          }
        }
        .text-box {
          width: 100%;
          display: block;
        }
        .hero-inner {
          display: flex;
          flex-direction: column;
          gap: 2rem;
          color: #fff;
          .text-box {
            width: 100%;
          }
        }
      }
      .second-section {
        padding: 2rem;
        .second-inner {
          .top-container {
            flex-direction: column;
            .second-text {
              width: 100%;
              padding: 0;
            }
            .image-container {
              justify-content: center;
              .image {
                width: 150px;
                height: 225px;
                margin-right: 0rem;
              }
              .square-shape {
                right: -1rem;
              }
              .circle-shape {
                top: 10em;
                left: 0rem;
              }
            }
          }
        }
      }
      .third-section {
        padding: 2rem;
        .text-box {
          padding-bottom: 2rem;
          p {
            padding-right: 0;
          }
        }
      }
      .forth-section {
        padding: 2rem;

        .forth-inner {
          background: #193563;
        }
      }
    }
  }
}
@media screen and (min-width: 768px) and (max-width: 1024px) {
  .app {
    .home-page,
    .about-page,
    .serivces-page,
    .contact-page,
    .single-service,
    .featured-work,
    .client-page,
    .policy-page,
    .client-discovery-form {
      .hero {
        .text-box {
            display: flex;
            flex-direction: column;
            gap: 3rem;
            width: 80%;
            animation: fadeIn 1.2s forwards;
          }
          .socials {
            display: flex;
            justify-content: end;
            align-items: start;
            margin-top: 8rem;
          }
          .hero-inner {
            display: flex;
            flex-direction: column;
            gap: 8rem;
      
            .text-box {
              width: 100%;
            }
          }
        }
      .second-section {
        padding: 3rem 3rem;
        .second-inner {
          .top-container {
            flex-direction: column;
            padding: 2rem 0rem 5rem;
            .second-text {
              width: 100%;
            }

            .image-container {
              justify-content: center;
              .square-shape {
                right: 7rem;
                top: 20px;
              }

              .circle-shape {
                left: 8rem;
              }
            }
          }
        }
      }
    }
  }
}

